# optimize_prompt_json

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: weather_schema.json
optimize_prompt_json/: README.md  __init__.py  cli.py  config.py  console.py  json_utils.py  llm.py  metrics.py  pipeline.py  prompts.py  pyproject.toml
optimize_prompt_json/database/: __init__.py  models.py
optimize_prompt_json/examples/: weather_text.txt
optimize_prompt_json/optimize_prompt_json/: __init__.py  __main__.py  config.py  metrics.py  prompts.py
optimize_prompt_json/optimize_prompt_json/database/: engine.py
tests/: test_config.py
