[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimize-prompt-json"
version = "0.1.0"
description = "Iterative LLM prompt optimization for JSON extraction from text"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rabieh Ami"},
]
dependencies = [
    "litellm>=1.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "deepdiff>=6.0",
    "jsonschema>=4.0",
    "scipy>=1.10",
    "sentence-transformers>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]


[project.urls]
Homepage = "https://github.com/rabiehami/optimize_prompt_json"
